<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/questionnaire"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:text="@string/enter_your_name" />

    <EditText
        android:id="@+id/edit_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="phone"
        android:text="@string/enter_your_phone" />

    <EditText
        android:id="@+id/edit_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:text="@string/enter_your_email" />

    <EditText
        android:id="@+id/edit_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number"
        android:text="@string/enter_your_internal_passport_id" />

    <EditText
        android:id="@+id/edit_text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="date"
        android:text="@string/enter_today_s_date" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="10dp"
        android:text="@string/please_change_your_password" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/edit_text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/edit_text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_calendar" />

    <CalendarView
        android:id="@+id/calendarView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
